create the login route
