# src/modules/core/models/player.model.ts
@@ -1,7 +1,6 @@
 export class Player {
   id?: number;
   name?: string;
-  avatarUrl?: string;
   createdAt?: Date;
   updatedAt?: Date;
 
