# src/modules/levels/entities/player.entity.ts
@@ -1,42 +1,0 @@
-import {
-  BeforeInsert,
-  BeforeUpdate,
-  Column,
-  CreateDateColumn,
-  Entity,
-  PrimaryGeneratedColumn,
-  UpdateDateColumn,
-} from 'typeorm';
-
-@Entity({ name: 'players' })
-export class PlayerEntity {
-  @PrimaryGeneratedColumn()
-  id: number;
-
-  @Column()
-  name: string;
-
-  @Column()
-  avatarUrl: string;
-
-  @CreateDateColumn()
-  createdAt: Date;
-
-  @UpdateDateColumn()
-  updatedAt: Date;
-
-  @BeforeInsert()
-  beforeInsert() {
-    this.createdAt = new Date();
-    this.updatedAt = new Date();
-  }
-
-  @BeforeUpdate()
-  beforeUpdate() {
-    this.updatedAt = new Date();
-  }
-
-  constructor(partial: Partial<PlayerEntity>) {
-    Object.assign(this, partial);
-  }
-}
