# src/modules/player/controllers/players.controller.ts
@@ -1,6 +1,6 @@
 import { Body, Controller, Param, Post } from '@nestjs/common';
 import { PlayersService } from '../services/players.service';
-import { CreatePlayerRequestDto, PlayerResponseDto } from '../../../api/build';
+import { AnonymousLoginRequestDto, CreatePlayerRequestDto, PlayerResponseDto } from '../../../api/build';
 import { Player } from '../../core/models/player.model';
 import { PlayersDtoConverter } from '../services/players-dto.converter';
 
@@ -12,6 +12,12 @@ export class PlayersController {
   async create(@Body() createPlayerRequestDto: CreatePlayerRequestDto): Promise<PlayerResponseDto> {
     let player: Player = this.playersDtoConverter.toModel(createPlayerRequestDto);
     player = await this.playersService.create(player);
+    return this.playersDtoConverter.toDto(player);
+  }
+
+  @Post('login')
+  async login(@Body() dto: AnonymousLoginRequestDto): Promise<PlayerResponseDto> {
+    const player = await this.playersService.login(dto.playerId);
     return this.playersDtoConverter.toDto(player);
   }
 }
